--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
+streamlit==1.38.0
+nltk==3.9.1
+textblob==0.18.0
+transformers==4.45.2
+torch
 pandas
-scikit-learn
-numpy
-matplotlib
-textblob
+
